fixing site header

--- a/src/components/SiteHeader/SiteHeader.module.scss
+++ b/src/components/SiteHeader/SiteHeader.module.scss
@@ -1,11 +1,12 @@
 .container{
+    width: 100%;
     background-color: transparent;
 }
 
 header{
-    width: 100vw;
+    width: 100%;
     img{
-        width: 100vw;
+        width: 100%;
     }
     nav{
         position: absolute;
