--- a/src/pages/Landing/Landing.module.scss
+++ b/src/pages/Landing/Landing.module.scss
@@ -8,9 +8,10 @@
           flex-direction: column;
           align-items: center;
           padding: 10px;
-          width: 300px;
+          max-width: 90%;
           font-size: 20pt;
           font-family: Lexend, Helvetica, sans-serif;
+          color: black;
           background-color: white;
           border: solid black 5px;
           border-radius: 2rem;
